--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Lobster&family=Nova+Cut&family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/index.css">
-    <title>Document</title>
+    <title>Amber Portfolio</title>
 </head>
 <body>
     
