--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
             </nav>
         </head>
         <!--end of head-->
-        <section class="main">
-            
-        </section>
+        <section class="main"><!--start of main section-->
+            <img class="mainimg" src="images/cosmic-timetraveler-pYyOZ8q7AII-unsplash.jpg" alt="an old wooden bridge over a small body of water, surronded by purple cherry blossom trees.">
+            <div class="about"><!--start of about div-->
+                <h2>Amber Dixon</h2>
+                <button>Projects</button>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis veniam veritatis libero suscipit sint, ad eveniet exercitationem voluptate. At quasi voluptatum aperiam iste quidem repellendus, impedit magnam a officia beatae!</p>
+            </div><!--start of about div-->
+        </section><!--end of main section-->
 
     </div><!--closes container div-->
          
