I add some sections and divs to divide the fist half of the first row of projects. I also add the css reset.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis veniam veritatis libero suscipit sint, ad eveniet exercitationem voluptate. At quasi voluptatum aperiam iste quidem repellendus, impedit magnam a officia beatae!</p>
             </div><!--start of about div-->
         </section><!--end of main section-->
+        <section class="top"><!--start of top section-->
+            <div class="left"><!--start of left div-->
+                <a href="https://codepen.io/KarmaMichaelis/pen/WNvVpmd"><img src="images/dessert.jpg"></a> 
+
+            </div><!--end of left div-->
+    
+
+         </section><!--end of top section-->
 
     </div><!--closes container div-->
          
