top section finished
All top section images/divs has been completed. I add images to the html file.

--- a/index.html
+++ b/index.html
@@ -31,11 +31,30 @@
             </div><!--start of about div-->
         </section><!--end of main section-->
         <section class="top"><!--start of top section-->
-            <div class="left"><!--start of left div-->
-                <a href="https://codepen.io/KarmaMichaelis/pen/WNvVpmd"><img src="images/dessert.jpg"></a> 
+            <div class="left1"><!--start of left1 div-->
+                <a href="https://codepen.io/KarmaMichaelis/pen/WNvVpmd"><img src="images/dessert.jpg" alt="A photo of a vanilla dessert with sliced strawberries and chocolate sauce on top."></a> 
+                <p>Sweet Eats Bakery</p>
+                <p>Click Image to View Project</p>
 
-            </div><!--end of left div-->
-    
+            </div><!--end of left1 div-->
+            <div class="right1"><!--start of right1 div-->
+                <a href="https://codepen.io/KarmaMichaelis/pen/zYGgzvo"> <img src="images/weddingcake.jpg" alt="A four level white wedding cake with big flowers around it." ></a>
+                <p>Sweet Eats Bakery: Wedding</p>
+                <p>Click Image to View Project</p>
+
+            </div><!--end of right1 div-->
+            <div class="left2"><!--start of left2 div-->
+                <a href="https://codepen.io/KarmaMichaelis/pen/QWbxoPv"><img src="images/butterfly-2049567_1920.jpg" alt="Glowing blue butterflies in a fantasy forest at night."></a>
+                <p>Preprocessing(1): Resume</p>
+                <p>Click Image to View Project</p>
+
+            </div><!--end of left2 div-->
+            <div class="right2"><!--start of right2 div-->
+
+            </div><!--start of right2 div-->
+            <a href="https://codepen.io/KarmaMichaelis/pen/YzPZQgR"> <img src="images/girl-160326_1280.png" alt="Chibi anime girl in winter clotheing"></a>
+            <p>Anime Store</p>
+            <p>Click Image to View Project</p>
 
          </section><!--end of top section-->
 
