I have reach the stopping point for tonight

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             <p>Click Image to View Project</p>
 
          </section><!--end of top section-->
+         <section class="bottom"><!--start of bottom section-->
+
+         </section><!--end of bottom section-->
 
     </div><!--closes container div-->
          
