Began again on project
I add the first div to the bottom section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
 
          </section><!--end of top section-->
          <section class="bottom"><!--start of bottom section-->
+            <div class="Bleft1"><!--start of Bleft1 div-->
+                <a href="https://github.com/KarmaMichaelis/User-Interface/tree/amber-dixon"><img src="images/bantersnaps-vz2zGzFktBo-unsplash.jpg" alt="A mystical image of a red portal."></a>
+                <p>User-Interface</p>
+                <p>Click Image to View Project</p>
+            </div><!--start of Bleft1 div-->
 
          </section><!--end of bottom section-->
 
