--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@
                 <a href="https://github.com/KarmaMichaelis/User-Interface/tree/amber-dixon"><img src="images/bantersnaps-vz2zGzFktBo-unsplash.jpg" alt="A mystical image of a red portal."></a>
                 <p>User-Interface</p>
                 <p>Click Image to View Project</p>
-            </div><!--start of Bleft1 div-->
+            </div><!--end of Bleft1 div-->
+            <div class="Bright1"><!--start of Bright1 div-->
+                <a href="https://karmamichaelis.github.io/portfolio-website/"><img src="images/tiger.jpg" alt="A white tiger sleeping by a pond."></a>
+                <p>Portfolio(I)</p>
+                <p>Click Image to View Project</p>
+
+            </div><!--end of Bright1 div-->
 
          </section><!--end of bottom section-->
 
