project section complete
All Project links and pictures with the sections and divs are complete

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
                 <p>Click Image to View Project</p>
 
             </div><!--end of Bright1 div-->
+            <div class="Bleft2"><!--start of Bleft2 div-->
+                <a href="https://github.com/KarmaMichaelis/Sprint-Challenge--User-Interface/tree/amber-dixon"><img src="images/branch.jpg" alt="frost and ice on a dark window glass."></a>
+                <p>User-Interface(1)-Sprint</p>
+                <p>Click Image to View Project</p>
+
+            </div><!--end of Bleft2 div-->
 
          </section><!--end of bottom section-->
 
