--- a/index.html
+++ b/index.html
@@ -75,8 +75,20 @@
                 <p>Click Image to View Project</p>
 
             </div><!--end of Bleft2 div-->
+            <div class="Bright2"><!--start of Bright2 div-->
+                <a href="https://github.com/KarmaMichaelis/responsive-web-design-I/branches"><img src="images/network-3537401_1920.jpg" alt="A picture of the World in space surronded by blue data stream."></a>
+                <p>Responsive Web Design I</p>
+                <p>Click Image to View Project</p>
+
+            </div><!--end of Bleft2 div-->
 
          </section><!--end of bottom section-->
+         <footer><!--start of footer-->
+            <div class="button">
+                <button>Contact Me</button>
+            </div>
+
+         </footer>
 
     </div><!--closes container div-->
          
