--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <h1>Amber Chantay Dixon</h1>
             <nav>
                 <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-                <a href="#">Projects</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="projects.html">Projects</a>
             </nav>
         </head>
         <!--end of head-->
@@ -26,7 +26,7 @@
             <img class="mainimg" src="images/cosmic-timetraveler-pYyOZ8q7AII-unsplash.jpg" alt="an old wooden bridge over a small body of water, surronded by purple cherry blossom trees.">
             <div class="about"><!--start of about div-->
                 <h2>Amber Dixon</h2>
-                <button>Projects</button>
+               <a href="projects.html"> <button>Projects</button></a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis veniam veritatis libero suscipit sint, ad eveniet exercitationem voluptate. At quasi voluptatum aperiam iste quidem repellendus, impedit magnam a officia beatae!</p>
             </div><!--start of about div-->
         </section><!--end of main section-->
@@ -85,7 +85,7 @@
          </section><!--end of bottom section-->
          <footer><!--start of footer-->
             <div class="button">
-                <button>Contact Me</button>
+                <a href="contact.html"><button>Contact Me</button></a>
             </div>
 
          </footer>
