--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container">
         <!--start of header-->
         <head>
+            <div class="start">
             <h1>Amber Chantay Dixon</h1>
             <nav>
                 <a href="#">Home</a>
@@ -20,6 +21,7 @@
                 <a href="contact.html">Contact</a>
                 <a href="projects.html">Projects</a>
             </nav>
+        </div><!--end of start div-->
         </head>
         <!--end of head-->
         <section class="main"><!--start of main section-->
