I have done most of the header styles.
I have put the rest of the heaer styles on hold to work on other css styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <!--start of header-->
-        <head>
+        <header>
             <div class="start">
             <h1>Amber Chantay Dixon</h1>
             <nav>
@@ -22,7 +22,7 @@
                 <a href="projects.html">Projects</a>
             </nav>
         </div><!--end of start div-->
-        </head>
+        </header>
         <!--end of head-->
         <section class="main"><!--start of main section-->
             <img class="mainimg" src="images/cosmic-timetraveler-pYyOZ8q7AII-unsplash.jpg" alt="an old wooden bridge over a small body of water, surronded by purple cherry blossom trees.">
@@ -34,19 +34,19 @@
         </section><!--end of main section-->
         <section class="top"><!--start of top section-->
             <div class="left1"><!--start of left1 div-->
-                <a href="https://codepen.io/KarmaMichaelis/pen/WNvVpmd"><img src="images/dessert.jpg" alt="A photo of a vanilla dessert with sliced strawberries and chocolate sauce on top."></a> 
+                <a href="https://codepen.io/KarmaMichaelis/pen/WNvVpmd"><img class="pic" src="images/dessert.jpg" alt="A photo of a vanilla dessert with sliced strawberries and chocolate sauce on top."></a> 
                 <p>Sweet Eats Bakery</p>
                 <p>Click Image to View Project</p>
 
             </div><!--end of left1 div-->
             <div class="right1"><!--start of right1 div-->
-                <a href="https://codepen.io/KarmaMichaelis/pen/zYGgzvo"> <img src="images/weddingcake.jpg" alt="A four level white wedding cake with big flowers around it." ></a>
+                <a href="https://codepen.io/KarmaMichaelis/pen/zYGgzvo"> <img class="pic" src="images/weddingcake.jpg" alt="A four level white wedding cake with big flowers around it." ></a>
                 <p>Sweet Eats Bakery: Wedding</p>
                 <p>Click Image to View Project</p>
 
             </div><!--end of right1 div-->
             <div class="left2"><!--start of left2 div-->
-                <a href="https://codepen.io/KarmaMichaelis/pen/QWbxoPv"><img src="images/butterfly-2049567_1920.jpg" alt="Glowing blue butterflies in a fantasy forest at night."></a>
+                <a href="https://codepen.io/KarmaMichaelis/pen/QWbxoPv"><img class="pic" src="images/butterfly-2049567_1920.jpg" alt="Glowing blue butterflies in a fantasy forest at night."></a>
                 <p>Preprocessing(1): Resume</p>
                 <p>Click Image to View Project</p>
 
@@ -54,31 +54,31 @@
             <div class="right2"><!--start of right2 div-->
 
             </div><!--start of right2 div-->
-            <a href="https://codepen.io/KarmaMichaelis/pen/YzPZQgR"> <img src="images/girl-160326_1280.png" alt="Chibi anime girl in winter clotheing"></a>
+            <a href="https://codepen.io/KarmaMichaelis/pen/YzPZQgR"> <img class="pic" src="images/girl-160326_1280.png" alt="Chibi anime girl in winter clotheing"></a>
             <p>Anime Store</p>
             <p>Click Image to View Project</p>
 
          </section><!--end of top section-->
          <section class="bottom"><!--start of bottom section-->
             <div class="Bleft1"><!--start of Bleft1 div-->
-                <a href="https://github.com/KarmaMichaelis/User-Interface/tree/amber-dixon"><img src="images/bantersnaps-vz2zGzFktBo-unsplash.jpg" alt="A mystical image of a red portal."></a>
+                <a href="https://github.com/KarmaMichaelis/User-Interface/tree/amber-dixon"><img class="pic" src="images/bantersnaps-vz2zGzFktBo-unsplash.jpg" alt="A mystical image of a red portal."></a>
                 <p>User-Interface</p>
                 <p>Click Image to View Project</p>
             </div><!--end of Bleft1 div-->
             <div class="Bright1"><!--start of Bright1 div-->
-                <a href="https://karmamichaelis.github.io/portfolio-website/"><img src="images/tiger.jpg" alt="A white tiger sleeping by a pond."></a>
+                <a href="https://karmamichaelis.github.io/portfolio-website/"><img class="pic" src="images/tiger.jpg" alt="A white tiger sleeping by a pond."></a>
                 <p>Portfolio(I)</p>
                 <p>Click Image to View Project</p>
 
             </div><!--end of Bright1 div-->
             <div class="Bleft2"><!--start of Bleft2 div-->
-                <a href="https://github.com/KarmaMichaelis/Sprint-Challenge--User-Interface/tree/amber-dixon"><img src="images/branch.jpg" alt="frost and ice on a dark window glass."></a>
+                <a href="https://github.com/KarmaMichaelis/Sprint-Challenge--User-Interface/tree/amber-dixon"><img class="pic" src="images/branch.jpg" alt="frost and ice on a dark window glass."></a>
                 <p>User-Interface(1)-Sprint</p>
                 <p>Click Image to View Project</p>
 
             </div><!--end of Bleft2 div-->
             <div class="Bright2"><!--start of Bright2 div-->
-                <a href="https://github.com/KarmaMichaelis/responsive-web-design-I/branches"><img src="images/network-3537401_1920.jpg" alt="A picture of the World in space surronded by blue data stream."></a>
+                <a href="https://github.com/KarmaMichaelis/responsive-web-design-I/branches"><img class="pic" src="images/network-3537401_1920.jpg" alt="A picture of the World in space surronded by blue data stream."></a>
                 <p>Responsive Web Design I</p>
                 <p>Click Image to View Project</p>
 
