stopping point met
finish with the main styles section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h2>Amber Dixon</h2>
                <a href="projects.html"> <button>Projects</button></a>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis veniam veritatis libero suscipit sint, ad eveniet exercitationem voluptate. At quasi voluptatum aperiam iste quidem repellendus, impedit magnam a officia beatae!</p>
-            </div><!--start of about div-->
+            </div><!--end of about div-->
         </section><!--end of main section-->
         <section class="top"><!--start of top section-->
             <div class="left1"><!--start of left1 div-->
